name:                kmc-regexps-syntax
version:             0.1.0.1
synopsis:            A parser for regular expressions.  Should support most
                     normal extensions to pure REs, like character classes
                     and ranges.
license:             MIT
license-file:        LICENSE
author:              Bjørn and Ulrik
maintainer:          bugge@diku.dk
category:            Text
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
  exposed-modules:     KMC.Syntax.External,
                       KMC.Syntax.Internal,
                       KMC.Syntax.Parser,
                       KMC.Syntax.Config,
                       KMC.Syntax.ParserTypes,
                       KMC.Syntax.Numeral,
                       KMC.Syntax.ParserCombinators,
                       KMC.Syntax.Unicode,
                       KMC.Syntax.Char

  build-depends:       Cabal          >= 1.22.0.0
                     , base           >=4.6 && <5
                     , parsec         >=3.1 && <3.2
                     , transformers   >=0.4 && <0.6

  default-language:    Haskell2010

  ghc-options: -Wall

test-suite tests
  default-language: Haskell2010
  type: detailed-0.9
  test-module: Tests
  hs-source-dirs: test/
  build-depends:  base >= 4.6 && < 5
                , Cabal >= 1.22.0.0
                , kmc-regexps-syntax
